Fixed scrollbar jump issue
https://aykevl.nl/2014/09/fix-jumping-scrollbar

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -3,6 +3,10 @@
 
 @import "variables";
 
+html {
+	overflow-x: hidden;
+	width: 100vw;
+}
 * {
 	padding: 0;
 	margin: 0;
